# DSA-Practice

./: Aggregation.cpp  AllPossibleCombiations.cpp  Anagram.cpp  AreaOfRectangle.cpp  BoundryPrint.cpp  BstToDll.cpp  BubbleSort.cpp  CMakeLists.txt  CountToGetPalindrome.cpp  DeleteBST.cpp  DevRev-1.cpp  DiameterTree.cpp  Dictionary.cpp  Dijkstra.cpp  FrequentSubtreeSum.cpp  FunctPtr.cpp  GenerateIP.cpp  Graph.cpp  Heap.cpp  Huffman.cpp  Inheritence.cpp  InsertionSort.cpp  Interview-1.cpp  Interview-2.cpp  JobScheduling.cpp  KMostElements.cpp  Kadane.cpp  KthSmallest.cpp  LinkList.cpp  LongestCommonSubsequence.cpp  LongestIncreasingSubsequence.cpp  Map.cpp  MaxHeap.cpp  MaxRoute.cpp  MergeSortedLists.cpp  MultipleInheritence.cpp  NQueen.cpp  NextGreaterElement.cpp  NoRepeatingPartitions.cpp  NonRepeating.cpp  (+32 more)
Amazon/: Amazon-1.cpp  Amazon-10.cpp  Amazon-11.cpp  Amazon-12.cpp  Amazon-13.cpp  Amazon-2.cpp  Amazon-3.cpp  Amazon-4.cpp  Amazon-5.cpp  Amazon-6.cpp  Amazon-7.cpp  Amazon-8.cpp  Amazon-9.cpp
Arcesium/: GFG1.cpp  GFG2.cpp  HackerRank1.cpp  HackerRank2.cpp
GSG/: leftShift.cpp
Revision/: Boggleword.cpp  BottomView.cpp  CircularTour.cpp  CoinChange.cpp  CountInversion.cpp  DifferentStrings.cpp  GraphToDLL.cpp  Knapsack.cpp  LCS.cpp  LeaderInArray.cpp  LongestPalindrome.cpp  MaxChainLength.cpp  MaxSumIncreasing.cpp  MinHeap.cpp  MinRotationSUm.cpp  MinimumDepth.cpp  MinimumSwaps.cpp  MissingElement.cpp  NMeetings.cpp  NextGreaterPermutation.cpp  ReverseLinkedList.cpp  SchedulingTask.cpp  ShortestPathMatrix.cpp  StringCircle.cpp  StringPermutations.cpp  SubsetSum.cpp  (+1 more)
(+6 files in other folders)
